--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -29,7 +29,9 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.android.support:support-v4:25.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 
     final supportLibraryVersion = '25.3.1'
     compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
