--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,6 +26,8 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
+    testCompile 'junit:junit:4.12'
+
     /* Development */
     compile project(':rximagepicker')
     compile project(':imagepicker')
